# upnp-client-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: FUNDING.yml
examples/: discover.rs  media_renderer_client.rs  media_server_client.rs
src/: device_client.rs  discovery.rs  lib.rs  main.rs  media_renderer.rs  media_server.rs  parser.rs  types.rs
