[package]
name = "upnp-client"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/tsirysndr/upnp-client-rs"
license = "MIT"
readme = "README.md"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities", "network-programming"]
keywords = ["upnp", "client", "tokio", "dlna"]
description = "A simple UPnP client written in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-stream = "0.3.3"
colored_json = "3.0.1"
elementtree = "1.2.3"
futures-util = "0.3.25"
http = "0.2.8"
serde = "1.0.152"
serde_json = "1.0.91"
socket2 = "0.4.7"
surf = { version = "2.3.2", features = ["h1-client-rustls"], default-features = false}
tokio = { version = "1.24.2", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"] }
